<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".fragments.OximeterFragment">

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/start_process_button_name"
        android:id="@+id/startProcess"
        android:textSize = "30sp"
        android:background = "@drawable/start_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="#ff0000"
        android:id="@+id/usbDeviceInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines = "10000"
        android:scrollbars = "vertical"
        android:typeface = "monospace"
        android:textSize = "10sp"
        android:layout_alignRight="@+id/stopProcess"
        android:layout_alignEnd="@+id/stopProcess" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/stop_process_button_name"
        android:textSize = "30sp"
        android:id="@+id/stopProcess"
        android:background = "@drawable/stop_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/label_percentage_spo2"
        android:textSize = "40sp"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAlignment="center"
        android:id="@+id/labelSpO2"
        android:background = "@drawable/panel_label"
        android:layout_below="@+id/usbDeviceInfo"
        android:layout_alignLeft="@+id/labelCurrentLocation"
        android:layout_alignStart="@+id/labelCurrentLocation" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:text="@string/default_empty_string"
        android:textSize = "80sp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/valueSpO2"
        android:background = "@drawable/panel_value"
        android:layout_below="@+id/labelSpO2"
        android:layout_alignLeft="@+id/labelSpO2"
        android:layout_alignStart="@+id/labelSpO2" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/label_pulse_rate"
        android:textSize="40sp"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAlignment="center"
        android:id="@+id/labelPRbpm"
        android:background="@drawable/panel_label"
        android:layout_below="@+id/usbDeviceInfo"
        android:layout_toLeftOf="@+id/stopProcess"
        android:layout_toStartOf="@+id/stopProcess" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:text="@string/default_empty_string"
        android:textSize="80sp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/valuePRbpm"
        android:background="@drawable/panel_value"
        android:layout_below="@+id/labelPRbpm"
        android:layout_toLeftOf="@+id/stopProcess"
        android:layout_toStartOf="@+id/stopProcess" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/label_current_location"
        android:textSize="40sp"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAlignment="center"
        android:id="@+id/labelCurrentLocation"
        android:background="@drawable/panel_label"
        android:layout_below="@+id/valueSpO2"
        android:layout_toLeftOf="@+id/stopProcess"
        android:layout_toStartOf="@+id/stopProcess"
        android:layout_marginTop="64dp" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="110dp"
        android:text="@string/default_empty_string"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:id="@+id/valueCurrentLocation"
        android:background="@drawable/panel_value"
        android:layout_below="@+id/labelCurrentLocation"
        android:layout_alignLeft="@+id/labelCurrentLocation"
        android:layout_alignStart="@+id/labelCurrentLocation" />

</RelativeLayout>