<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".fragments.BloodPressureFragment">

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/label_sys"
        android:textSize = "25sp"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAlignment="center"
        android:id="@+id/labelSYS"
        android:background = "@drawable/panel_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/default_empty_string"
        android:textSize = "50sp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/valueSYS"
        android:layout_below="@+id/labelSYS"
        android:layout_alignParentLeft="true"
        android:background = "@drawable/panel_value"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/label_dia"
        android:textSize="25sp"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAlignment="center"
        android:id="@+id/labelDIA"
        android:background="@drawable/panel_label"
        android:layout_alignTop="@+id/labelSYS"
        android:layout_alignLeft="@+id/valueDIA"
        android:layout_alignStart="@+id/valueDIA" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/default_empty_string"
        android:textSize="50sp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/valueDIA"
        android:background="@drawable/panel_value"
        android:layout_below="@+id/labelDIA"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/label_heart_rate"
        android:textSize="25sp"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAlignment="center"
        android:id="@+id/labelHeartRate"
        android:background="@drawable/panel_label"
        android:layout_alignTop="@+id/labelDIA"
        android:layout_alignRight="@+id/deviceInfo"
        android:layout_alignEnd="@+id/deviceInfo" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/default_empty_string"
        android:textSize="50sp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/valueHeartRate"
        android:background="@drawable/panel_value"
        android:layout_below="@+id/labelHeartRate"
        android:layout_alignLeft="@+id/labelHeartRate"
        android:layout_alignStart="@+id/labelHeartRate" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="30dp"
        android:text="@string/label_current_location"
        android:textSize="25sp"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAlignment="center"
        android:id="@+id/labelCurrentLocation"
        android:background="@drawable/panel_label"
        android:layout_below="@+id/valueSYS"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="78dp"
        android:layout_alignRight="@+id/valueCurrentLocation"
        android:layout_alignEnd="@+id/valueCurrentLocation" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="110dp"
        android:text="@string/default_empty_string"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:id="@+id/valueCurrentLocation"
        android:background="@drawable/panel_value"
        android:layout_below="@+id/labelCurrentLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/deviceInfo"
        android:layout_alignEnd="@+id/deviceInfo" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:textColor="#ff0000"
        android:id="@+id/deviceInfo"
        android:maxLines = "10000"
        android:scrollbars = "vertical"
        android:typeface = "monospace"
        android:textSize = "10sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/startProcess"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/valueCurrentLocation" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_process_button_name"
        android:id="@+id/startProcess"
        android:textSize = "25sp"
        android:background="#33ff00"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/deviceInfo"
        android:layout_alignEnd="@+id/deviceInfo" />

</RelativeLayout>